# gammareport

./: .env  .gitignore  PROJECT_CONTEXT.md  pyproject.toml
.streamlit/: config.toml
app/: constants.py  main.py
app/components/: company_filter.py  dynamic_rows.py  form_components.py  gri_renderer.py
app/pages/: EnvironmentMissingData.py  GovernanceMissingData.py  SocialMissingdata.py  biodiversity.py
app/ui/: theme.py
app/views/: dashboard.py  environment.py  universal.py  universal_spec.py
app/views/gri/: gri_301_1.py  gri_301_2.py  gri_302_2.py  gri_302_5.py
config/: gri301_forms.py  gri302_forms.py  gri303_forms.py  gri306_forms.py  gri308_forms.py
core/: database.py
repositories/: company_repository.py  environment_repository.py  esg_repository.py
services/: environment_service.py
utils/: calculations.py  constants.py  sanitizers.py  validators.py
